added assertThrows, assertTrue and assertDefault